--- a/.github/workflows/Alloino-gne.yml
+++ b/.github/workflows/Alloino-gne.yml
@@ -40,15 +40,15 @@ jobs:
 
       - name: Parse JSON config and download Join playlists
         run: |
-          # Save JSON from secret to file
-          echo "${{ secrets.PLAYLIST_CONFIG_JSON }}" > config.json
+          # Remove outer quotes and unescape JSON from secret
+          echo "${{ secrets.PLAYLIST_CONFIG_JSON }}" | sed 's/^"\(.*\)"$/\1/' | sed 's/\\"/"/g' > config.json
           
           # Validate JSON
-          cat config.json | jq .
+          jq . config.json
           
           mkdir -p merged/join
           
-          # Download each Join playlist
+          # Download Join playlists
           jq -c '.Join[]' config.json | while read item; do
             name=$(echo "$item" | jq -r '.Name')
             url=$(echo "$item" | jq -r '.Url')
