--- a/.github/workflows/t.yml
+++ b/.github/workflows/t.yml
@@ -2,7 +2,7 @@ name: Auto Update & Push Playlist
 
 on:
   schedule:
-    - cron: '*/25 * * * *'  # Runs every 1 hour
+    - cron: '*/25 * * * *'  # Runs every 25 minutes
   workflow_dispatch:
 
 jobs:
@@ -34,8 +34,8 @@ jobs:
 
     - name: Copy selected playlist files to target repository
       run: |
-        cp channels_data.json ${{ secrets.TARGET_NAMETS }}/channels_data.json
-        cp *.m3u ${{ secrets.TARGET_NAMETS }}/*.m3u
+        cp *.json ${{ secrets.TARGET_NAMETS }}/ || true
+        cp *.m3u ${{ secrets.TARGET_NAMETS }}/ || true
 
     - name: Commit & push to target repository
       run: |
